putting index on root

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1 class="text-3xl font-bold underline bg-amber-300">
-    Hello world!
+    Hello worlD!!!!!
   </h1>
 </body>
 </html>
