--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="src/output.css" rel="stylesheet">
+  <title>University of Pennsylvania</title>
 </head>
 <body>
   <h1 class="text-3xl font-bold underline bg-amber-300">
@@ -11,3 +12,4 @@
   </h1>
 </body>
 </html>
+
