--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="src/output.css" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>University of Pennsylvania</title>
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline bg-amber-300">
-    Hello worlD!!!!!
-  </h1>
+<body class="font-serif">
+
+    <div class="bg-[#002F6C] text-white text-center p-4">  <a href="#" class="block hover:underline">  <p class="text-xl">On Friday, February 14, 2025 the University will suspend normal operations for the Eagles victory parade</p>
+            <p class="text-xl">Normal operations will resume Monday, February 17, 2025</p>
+        </a>
+    </div>
 </body>
 </html>
 
