--- a/index.html
+++ b/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>University of Pennsylvania (Mockup)</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="src/output.css" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>University of Pennsylvania</title>
 </head>
 <body class="font-serif">
+  
+  <!-- Announcement Bar -->
+  <div class="bg-[#002F6C] text-white text-center p-4">
+    <a href="#" class="block hover:underline">
+      <p class="text-3xl"><u>On Friday, February 14, 2025 the University will suspend normal operations for the Eagles victory parade</u></p>
+      <p class="text-xl">Normal operations will resume Monday, February 17, 2025</p>
+    </a>
+  </div>
 
-    <div class="bg-[#002F6C] text-white text-center p-4">
-        <a href="#" class="block hover:underline">
-            <p class="text-xl">On Friday, February 14, 2025 the University will suspend normal operations for the Eagles victory parade</p>
-            <p class="text-xl">Normal operations will resume Monday, February 17, 2025</p>
-        </a>
+  <!-- Hero Section with Background Image -->
+  <div class="relative w-full h-200 overflow-hidden">
+    <img src="src/images/avian-bird-flu.jpg" alt="Background Image" class="w-full h-full object-cover">
+    
+    <!-- Logo Placeholder -->
+    <div class="absolute top-6 left-6">
+      <img src="src/images/UPenn-logo.svg" alt="Penn Logo" class="h-20 w-auto">
     </div>
 
-    <header class="relative w-full">  <img src="src/images/avian-bird-flu.jpg" alt="Hero Image" class="w-full h-auto object-cover">
-        <div class="absolute inset-0 bg-black/50 z-10"></div>
-        <div class="absolute top-0 left-0 right-0 z-30 py-4 px-8">
-            <div class="container mx-auto flex justify-between items-center">
-                <div>
-                    <a href="#">
-                        <img src="src/images/simplified-shield.ico" alt="Penn Logo" class="h-12">
-                    </a>
-                </div>
-                <div class="flex items-center space-x-6">
-                    <a href="#" class="hover:underline text-white">Q RESOURCES</a>
-                    <a href="#" class="bg-[#BF0D3E] hover:bg-[#980A2A] text-white font-bold py-2 px-4 rounded">GIVE TO PENN</a>
-                    <input type="text" placeholder="Search" class="border border-gray-300 rounded px-2 py-1">
-                </div>
-            </div>
-        </div>
-        <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/80 to-transparent p-8 z-20">
-            <h1 class="text-white text-4xl font-bold mb-4">How Penn is helping with bird flu research and disease surveillance</h1>
-        </div>
-    
+    <!-- Overlay Text -->
+    <div class="absolute bottom-10 left-10 text-white">
+      <p class="uppercase text-sm tracking-widest">Health Sciences</p>
+      <h1 class="text-3xl font-semibold max-w-xl leading-snug">
+        How Penn is helping with bird flu research and disease surveillance
+      </h1>
+    </div>
+  </div>
+
 </body>
 </html>
