logo adjustment and adding bg image to semi-transparent black o verlay

--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
 <body class="font-serif">
   
   <!-- Announcement Bar -->
-  <div class="bg-[#002F6C] text-white text-center p-4">
-    <a href="#" class="block hover:underline">
-      <p class="text-3xl"><u>On Friday, February 14, 2025 the University will suspend normal operations for the Eagles victory parade</u></p>
-      <p class="text-xl">Normal operations will resume Monday, February 17, 2025</p>
+  <div class="bg-[#002F6C] text-white p-4 text-center">
+    <a href="#" class="block underline hover:no-underline">  <p class="text-3xl">On Friday, February 14, 2025 the University will suspend normal operations for the Eagles victory parade</p>
     </a>
-  </div>
+    <p class="text-xl">Normal operations will resume Monday, February 17, 2025</p>
+</div>
 
   <!-- Hero Section with Background Image -->
-  <div class="relative w-full h-200 overflow-hidden">
-    <img src="src/images/avian-bird-flu.jpg" alt="Background Image" class="w-full h-full object-cover">
+<div class="relative w-full h-230 overflow-hidden">
+  <img 
+    src="src/images/avian-bird-flu.jpg" 
+    alt="Background Image" 
+    class="w-full h-full object-fill">
+    <div class="absolute inset-0 z-10 bg-black/50"></div>
+</div>
     
     <!-- Logo Placeholder -->
-    <div class="absolute top-6 left-6">
+    <div class="absolute top-40 left-6">
       <img src="src/images/UPenn-logo.svg" alt="Penn Logo" class="h-20 w-auto">
     </div>
 
