News section items resizing

--- a/index.html
+++ b/index.html
@@ -92,62 +92,53 @@
             <span class="text-xl">Topics</span>
         </div>
     </div>
-    <div class="grid grid-cols-3 gap-4">
 
-      <div class="col-span-1">
-          <div class="bg-gray-100 p-4 rounded">
-              <div class="mb-2">
-                <img src="src/images/pavilion-gift-teaser.jpg" alt="Image 1" class="w-full h-48 bg-gray-300"> </div>
-              <p class="text-red-800 text-center">HEALTH SCIENCES</p>
-              <a href="#" class=" hover:underline text-blue-950 text-3xl">Catherine and Anthony Clifton make transformational gift to accelerate patient care, research, and education at Penn Medicine</a>
-              
-          </div>
-      </div>
+    <div class="grid grid-cols-2 gap-4">
 
-      <div class="col-span-1">
-          <div class="bg-gray-100 p-4 rounded">
-               <div class="mb-2">
-                <img src="src/images/epstein-jon-teaser.jpg" alt="Image 2" class="w-full h-48 bg-gray-300"> </div>
-              <p class="text-red-800 text-center">HEALTH SCIENCES</p>
-              <a href="#" class=" hover:underline text-blue-950">Jonathan A. Epstein named head of Perelman School of Medicine and Penn Health System</a>
-          </div>
-      </div>
+        <div class="row-span-2">
+            <div class="bg-gray-100 p-4 rounded">
+                <img src="src/images/pavilion-gift-teaser.jpg" alt="Image 1" class="w-full h-96 bg-gray-300">
+                <p class="text-red-800 text-center">HEALTH SCIENCES</p>
+                <a href="#" class="hover:underline text-blue-950 text-3xl">Catherine and Anthony Clifton make transformational gift to accelerate patient care, research, and education at Penn Medicine</a>
+            </div>
+        </div>
 
-      <div class="col-span-1">
-          <div class="bg-gray-100 p-4 rounded">
-               <div class="mb-2">
-                <img src="src/images/america-250-teaser-social-main.jpg" alt="Image 3" class="w-full h-48 bg-gray-300"> </div>
-                <p class="text-red-800 text-center">Arts, Humanities, & Social Sciences</p>
-                <a href="#" class=" hover:underline text-blue-950">Penn prepares to mark America’s 250th birthday</a>
-          </div>
-      </div>
+        <div class="grid grid-cols-2 gap-4">  <div>
+                <div class="bg-gray-100 p-4 rounded">
+                    <img src="src/images/epstein-jon-teaser.jpg" alt="Image 2" class="w-full h-48 bg-gray-300">
+                    <p class="text-red-800 text-center">HEALTH SCIENCES</p>
+                    <a href="#" class="hover:underline text-blue-950">Jonathan A. Epstein named head of Perelman School of Medicine and Penn Health System</a>
+                </div>
+            </div>
+            <div>
+                <div class="bg-gray-100 p-4 rounded">
+                    <img src="src/images/america-250-teaser-social-main.jpg" alt="Image 3" class="w-full h-48 bg-gray-300">
+                    <p class="text-red-800 text-center">Arts, Humanities, & Social Sciences</p>
+                    <a href="#" class="hover:underline text-blue-950">Penn prepares to mark America’s 250th birthday</a>
+                </div>
+            </div>
+            <div>
+                <div class="bg-gray-100 p-4 rounded">
+                    <img src="src/images/preservation-campus-teaser.jpg" alt="Image 4" class="w-full h-48 bg-gray-300">
+                    <p class="text-red-800 text-center">ARTS, HUMANITIES, & SOCIAL SCIENCES</p>
+                    <a href="#" class="hover:underline text-blue-950">A rare on-campus assignment for preservation students holds 'small revelations'</a>
+                </div>
+            </div>
+            <div>
+                <div class="bg-gray-100 p-4 rounded">
+                    <img src="src/images/chan-vanessa-teaser.jpg" alt="Image 5" class="w-full h-48 bg-gray-300">
+                    <p class="text-red-800 text-center">SCIENCE & TECHNOLOGY</p>
+                    <a href="#" class="hover:underline text-blue-950">Vanessa Chan bridges the gap between innovation and the market</a>
+                </div>
+            </div>
+        </div>
 
-      <div class="col-span-1">
-          <div class="bg-gray-100 p-4 rounded">
-               <div class="mb-2">
-                <img src="src/images/preservation-campus-teaser.jpg" alt="Image 4" class="w-full h-48 bg-gray-300"> </div>
-                <p class="text-red-800 text-center">ARTS, HUMANITIES, & SOCIAL SCIENCES</p>
-              <p>A rare on-campus assignment for preservation students holds 'small revelations'</p>
-          </div>
-      </div>
-      <div class="col-span-1">
-          <div class="bg-gray-100 p-4 rounded">
-               <div class="mb-2">
-                <img src="src/images/chan-vanessa-teaser.jpg" alt="Image 5" class="w-full h-48 bg-gray-300"> </div>
-                <p class="text-red-800 text-center">SCIENCE & TECHNOLOGY<p>
-              <p>Vanessa Chan bridges the gap between innovation and the market</p>
-          </div>
-      </div>
+    </div>
 
-
-
-  </div>
-
-  <div class="mt-4 text-center">
-      <a href="#" class="text-red-800">MORE NEWS VIA PENN TODAY</a>
-  </div>
+    <div class="mt-4 text-center">
+        <a href="#" class="hover:underline text-red-800">MORE NEWS VIA PENN TODAY</a>
+    </div>
 
 </div>
-
 </body>
 </html>
