News section items resizing

--- a/index.html
+++ b/index.html
@@ -40,37 +40,31 @@
         </div>
       </div>
 
-      <nav class="container mx-auto pt-9">
-        <ul class="flex space-x-2.5">
-          <li>
-            <a href="#" class="font-bold hover:underline text-white text-sm">ACADEMICS</a>
-          </li>
-          <li>
-            <a href="#" class="font-bold hover:underline text-white text-sm">More Academics</a>
-          </li>
-          <li>
-            <a href="#" class="font-bold hover:underline text-white text-sm">ADMISSIONS & AID</a>
-          </li>
-          <li>
-            <a href="#" class="font-bold hover:underline text-white text-sm">ATHLETICS</a>
-          </li>
-          <li>
-            <a href="#" class="font-bold hover:underline text-white text-sm">RESEARCH & INNOVATION</a>
-          </li>
-          <li>
-            <a href="#" class="font-bold hover:underline text-white text-sm">More Research & Innovation</a>
-          </li>
-          <li>
-            <a href="#" class="font-bold hover:underline text-white text-sm">LIFE AT PENN</a>
-          </li>
-          <li>
-            <a href="#" class="font-bold hover:underline text-white text-sm">More Life at Penn</a>
-          </li>
-          <li>
-            <a href="#" class="font-bold hover:underline text-white text-sm">ABOUT</a>
-          </li>
+      
+      <nav class="flex justify-end w-full space-y-0">
+        <ul class="flex items-center">
+            <li><a href="#" class=" text-white">ACADEMICS
+                <i class="ri-arrow-down-s-line text-white text-lg ml-2"></i>
+            </a></li>
+            <li class="px-2 text-xl" style="color: rgba(255, 255, 255, 0.4);">/</li>
+            <li><a href="#" class=" text-white">ADMISSIONS & AID</a></li>
+            <li class="px-2 text-xl" style="color: rgba(255, 255, 255, 0.4);">/</li>
+            <li><a href="#" class=" text-white">ATHLETICS</a></li>
+            <li class="px-2 text-xl" style="color: rgba(255, 255, 255, 0.4);">/</li>
+            <li><a href="#" class=" text-white">RESEARCH & INNOVATION
+                <i class="ri-arrow-down-s-line text-white text-lg ml-2"></i>
+            </a></li>
+            <li class="px-2 text-xl" style="color: rgba(255, 255, 255, 0.4);">/</li>
+            <li><a href="#" class=" text-white">LIFE AT PENN
+                <i class="ri-arrow-down-s-line text-white text-lg ml-2"></i>
+            </a></li>
+            <li class="px-2 text-xl" style="color: rgba(255, 255, 255, 0.5);">/</li>
+            <li><a href="#" class=" text-white">ABOUT
+                <i class="ri-arrow-down-s-line text-white text-lg ml-2"></i>
+            </a></li>
         </ul>
-      </nav>
+    </nav>
+
 
       <div class="p-8">
         <p class="uppercase text-sm tracking-widest text-white">Health Sciences</p>
@@ -135,10 +129,24 @@
 
     </div>
 
-    <div class="mt-4 text-center">
+    <div class="mt-4 text-right px-1">
         <a href="#" class="hover:underline text-red-800">MORE NEWS VIA PENN TODAY</a>
     </div>
+<!-- community section -->
+ 
+<div class="container mx-auto px-4 py-8">
+  <div class="flex relative">  <div class="w-1/2 pr-8 z-10">  <div class="bg-blue-800 text-white p-8 rounded-lg">  <h1 class="font-lora text-4xl font-bold mb-4">Penn Center for Innovation celebrates 10 years</h1>
+        <p class="mb-6">The University's nexus for technology transfer supports researchers in their innovative efforts, from CAR T to mRNA advancements that have dramatically reshaped the world.</p>
+        <button class="bg-blue-500 text-white px-6 py-3 rounded hover:bg-white hover:text-blue-500 border border-blue-500">Learn More</button>  </div>
+    </div>
+    <div class="w-full h-full absolute inset-0">  <img src="src/images/penn-center-innovation.jpg" alt="Innovation Image" class="w-full h-full object-cover rounded-lg">
+    </div>
+  </div>
+</div>
 
+<div class="container mx-auto px-4 py-8">
+  <h2 class="text-2xl font-bold mb-4">Upcoming Events</h2>
+</div>
 </div>
 </body>
 </html>
