--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="font-serif">
 
-  <div class="bg-[#00166c] text-white p-4 text-center">
+  <div class="bg-[#00166c] text-white p-8 text-left">
     <a href="#" class="block underline hover:no-underline">
       <p class="text-xl md:text-2xl">
         On Friday, February 14, 2025 the University will suspend normal operations for the Eagles victory parade
@@ -133,20 +133,22 @@
         <a href="#" class="hover:underline text-red-800">MORE NEWS VIA PENN TODAY</a>
     </div>
 <!-- community section -->
- 
-<div class="container mx-auto px-4 py-8">
-  <div class="flex relative">  <div class="w-1/2 pr-8 z-10">  <div class="bg-blue-800 text-white p-8 rounded-lg">  <h1 class="font-lora text-4xl font-bold mb-4">Penn Center for Innovation celebrates 10 years</h1>
-        <p class="mb-6">The University's nexus for technology transfer supports researchers in their innovative efforts, from CAR T to mRNA advancements that have dramatically reshaped the world.</p>
-        <button class="bg-blue-500 text-white px-6 py-3 rounded hover:bg-white hover:text-blue-500 border border-blue-500">Learn More</button>  </div>
-    </div>
-    <div class="w-full h-full absolute inset-0">  <img src="src/images/penn-center-innovation.jpg" alt="Innovation Image" class="w-full h-full object-cover rounded-lg">
-    </div>
+<div class="width-full relative overflow-hidden h-[700px]">  <img src="src/images/penn-center-innovation.jpg" alt="Penn Center for Innovation" class="absolute inset-0 w-full h-full object-cover" />
+  <div class="relative z-10 mx-auto max-w-7xl px-4 py-8">  <div class="flex">
+          <div class="w-1/2 pr-8">
+              <div class="bg-blue-800 text-white p-8 rounde-lg h-[500px]">
+                <p class="mb-6 text-center">Campus & Community</p>
+                  <p class="font-lora text-center text-4xl font-bold mb-4">Penn Center for Innovation celebrates 10 years</p>
+                  <p class="mb-6 text-center">The University's nexus for technology transfer supports researchers in their innovative efforts, from CAR T to mRNA advancements that have dramatically reshaped the world.</p>
+                  <div class="flex justify-center"><button class="bg-blue-800 text-white px-6 py-3 rounded-full hover:bg-white hover:text-red-800 border border-blue-500">Learn More</button></div>
+              </div>
+          </div>
+      </div>
   </div>
 </div>
 
 <div class="container mx-auto px-4 py-8">
   <h2 class="text-2xl font-bold mb-4">Upcoming Events</h2>
-</div>
 </div>
 </body>
 </html>
