--- a/index.html
+++ b/index.html
@@ -147,8 +147,58 @@
   </div>
 </div>
 
-<div class="container mx-auto px-4 py-8">
-  <h2 class="text-2xl font-bold mb-4">Upcoming Events</h2>
+<!-- upcoming events -->
+<div class="container mx-auto p-4">
+
+  <div class="flex justify-between items-center mb-4">
+      <div>
+          <span class="text-5xl text-blue-950">Upcoming Events</span>
+      </div>
+  </div>
+
+  <div class="grid grid-cols-3 gap-4">
+
+      <div class="relative">
+          <div class="bg-gray-100 p-4 h-full"> 
+              <img src="src/images/grad-center-locust-walk.jpg" alt="Event 1" class="w-full object-cover">
+              <div class="absolute top-8 right-8 w-12 h-12 overflow-hidden">
+                  <div class="bg-red-800 text-white text-center pt-2 h-6">FEB</div>
+                  <div class="bg-white text-blue-950 text-center pb-2 h-6">18</div>
+              </div>
+              <div class="mt-4"> <span class="text-xs uppercase text-gray-500">Talks</span> </div>
+              <a href="#" class="hover:underline text-2xl text-blue-950">Managing Presentation Anxiety</a>
+              <p class="text-gray-700">Communication Within the Curriculum Associate Director Sue Weber offers tips and tricks to control anxiety during public speaking. A Penn graduate student ID is required.</p>
+          </div>
+      </div>
+
+      <div class="relative">
+          <div class="bg-gray-100 p-4 h-full">
+               <div class="absolute top-8 right-8 w-12 h-12 overflow-hidden">
+                  <div class="bg-red-800 text-white text-center pt-2 h-6">FEB</div>
+                  <div class="bg-white text-blue-950 text-center pb-2 h-10">19</div>
+              </div>
+              <div class="mt-20"> <span class="text-xs uppercase text-gray-500">Special Events</span> </div>
+              <a href="#" class="hover:underline text-2xl text-blue-950">Historic Pennsylvania Hospital Tour</a>
+              <p class="text-gray-700">Holman Biotech Commons hosts a public tour of Pennsylvania Hospital, the nation's first hospital. Attendees will tour the Great Court, Historic Library, and Surgical Amphitheatre. Registration is required.</p>
+          </div>
+      </div>
+
+      <div class="relative">
+          <div class="bg-gray-100 p-4 h-full">
+              <div class="absolute top-8 right-8 w-12 h-12 overflow-hidden">
+                  <div class="bg-red-800 text-white text-center pt-2 h-6">FEB</div>
+                  <div class="bg-white text-blue-950 text-center pb-2 h-6">21</div>
+              </div>
+              <div class="mt-20"> <span class="text-xs uppercase text-gray-500">Talks</span> </div>
+              <a href="#" class="hover:underline text-2xl text-blue-950">Jesse Rothstein</a>
+              <p class="text-gray-700">Jesse Rothstein, a professor of public policy and economics at the University of California, Berkeley, hosts a seminar about the role of social safety net programs in college student success.
+
+              </p>
+          </div>
+      </div>
+
+  </div>
+
 </div>
 </body>
 </html>
