--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 </head>
 <body class="font-serif">
 
-  <div class="bg-[#00166c] text-white p-8 text-left">
+  <div class="bg-[#00166c] text-white p-8 text-left ">  <div class="border border-gray-400 rounded p-6">
     <a href="#" class="block underline hover:no-underline">
-      <p class="text-xl md:text-2xl">
-        On Friday, February 14, 2025 the University will suspend normal operations for the Eagles victory parade
-      </p>
+        <p class="text-xl md:text-2xl">
+            On Friday, February 14, 2025 the University will suspend normal operations for the Eagles victory parade
+        </p>
     </a>
     <p class="text-lg md:text-xl mt-1">
-      Normal operations will resume Monday, February 17, 2025
+        Normal operations will resume Monday, February 17, 2025
     </p>
-  </div>
+</div>
+</div>
 
   <div class="relative w-full h-[800px] overflow-hidden">
     <img 
-      src="src/images/avian-bird-flu.jpg" 
+      src="src/images/avian-bird-flu_1.jpg" 
       alt="Background Image" 
       class="absolute inset-0 w-full h-full object-cover opacity-100"/>
     <div class="absolute inset-0 bg-black/50"></div>
@@ -140,7 +141,7 @@
                 <p class="mb-6 text-center">Campus & Community</p>
                   <p class="font-lora text-center text-4xl font-bold mb-4">Penn Center for Innovation celebrates 10 years</p>
                   <p class="mb-6 text-center">The University's nexus for technology transfer supports researchers in their innovative efforts, from CAR T to mRNA advancements that have dramatically reshaped the world.</p>
-                  <div class="flex justify-center"><button class="bg-blue-800 text-white px-6 py-3 rounded-full hover:bg-white hover:text-red-800 border border-blue-500">Learn More</button></div>
+                  <div class="flex justify-center"><button class="bg-blue-950 text-white px-6 py-3 rounded-full hover:bg-white hover:text-red-800 border border-blue-950">Learn More</button></div>
               </div>
           </div>
       </div>
@@ -173,7 +174,7 @@
 
       <div class="relative">
           <div class="bg-gray-100 p-4 h-full">
-               <div class="absolute top-8 right-8 w-12 h-12 overflow-hidden">
+               <div class="absolute top-8 right-8 w-12 h-12 overflow-hidden shadow-xl">
                   <div class="bg-red-800 text-white text-center pt-2 h-6">FEB</div>
                   <div class="bg-white text-blue-950 text-center pb-2 h-10">19</div>
               </div>
@@ -185,20 +186,38 @@
 
       <div class="relative">
           <div class="bg-gray-100 p-4 h-full">
-              <div class="absolute top-8 right-8 w-12 h-12 overflow-hidden">
+              <div class="absolute top-8 right-8 w-12 h-12 overflow-hidden shadow-xl">
                   <div class="bg-red-800 text-white text-center pt-2 h-6">FEB</div>
                   <div class="bg-white text-blue-950 text-center pb-2 h-6">21</div>
               </div>
               <div class="mt-20"> <span class="text-xs uppercase text-gray-500">Talks</span> </div>
               <a href="#" class="hover:underline text-2xl text-blue-950">Jesse Rothstein</a>
-              <p class="text-gray-700">Jesse Rothstein, a professor of public policy and economics at the University of California, Berkeley, hosts a seminar about the role of social safety net programs in college student success.
-
-              </p>
+              <p class="text-gray-700">Jesse Rothstein, a professor of public policy and economics at the University of California, Berkeley, hosts a seminar about the role of social safety net programs in college student success.</p>
           </div>
       </div>
-
   </div>
+</div>
+<!-- Suppport penn section -->
+<div class="container mx-auto p-4 mt-8">
+  <div class="grid grid-cols-2 gap-8">
 
+      <div class="bg-[#f8f8f8] p-6 shadow-md border border-gray-200">
+          <div class="border border-gray-300 p-6"> <div class="flex justify-center mb-4">  <img src="src/images/Inspiring-Impact-Campaign-Logo.png" alt="Inspiring Impact" class="h-16">
+              </div>
+              <p class="text-gray-700 mb-6 text-center">Your support ignites change locally and globally, transforming Penn into a powerful engine that advances knowledge for society's greatest good.</p>
+              <div class="flex justify-center">  <button class="bg-white text-gray-800 py-2 px-6 border border-gray-300 hover:bg-blue-950 hover:text-white rounded-full">SUPPORT PENN</button>
+              </div>
+          </div>
+      </div>
+      <div class="bg-blue-950 p-6 shadow-md border border-gray-200">
+        <div class="border border-gray-300 p-6"> <div class="flex justify-center mb-4">  <a href="#" class="hover:underline text-2xl text-white">Historic Pennsylvania Hospital Tour</a>
+            </div>
+            <p class="text-white mb-6 text-center">During these challenging times, Penn remains committed to supporting students, faculty, and staff and to sharing information with our larger community of alumni, parents, and friends.</p>
+            <div class="flex justify-center">  <button class="bg-blue-950 text-white py-2 px-6  rounded-full border border-gray-300 hover:bg-white hover:text-red-800">SUPPORT PENN</button>
+            </div>
+        </div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
