penn priorities section

--- a/index.html
+++ b/index.html
@@ -219,5 +219,11 @@
     </div>
   </div>
 </div>
+<!-- penn priorities section -->
+<div class="bg-[#002855] py-16 text-center text-white relative">  <div class="absolute inset-0 w-full h-full bg-[#002855]"></div>  <div class="relative z-10 container mx-auto">
+  <h3 class="text-5xl font-bold mb-7">Penn Priorities</h3>
+  <p class="text-2xl leading-relaxed">A look at a few of our big picture priorities that improve Penn as we create knowledge to benefit the world.</p>
+</div>
+</div>
 </body>
 </html>
