non-discrimination section

--- a/index.html
+++ b/index.html
@@ -257,5 +257,20 @@
   </div>
 
 </div>
+
+<!-- non-discrimination section  -->
+<div class="bg-blue-950 py-16 px-4 relative">
+  <div class="absolute inset-0 w-full h-full bg-blue-950"></div>
+  <div class="relative z-10 container mx-auto">
+      <h2 class="text-3xl mb-4 text-center text-white">Equal Opportunity and Nondiscrimination at Penn</h2>
+      <div class="text-lg leading-relaxed text-white">
+          <p class="mb-4">The University of Pennsylvania values diversity and seeks talented students, faculty and staff with diverse backgrounds, experiences, and perspectives. The University of Pennsylvania does not discriminate on the basis of race, color, sex, sexual orientation, gender identity, religion, creed, national or ethnic origin, citizenship status, age, disability, veteran status or any other legally protected class status in the administration of its admissions, financial aid, educational or athletic programs, or other University-administered programs or in its employment practices.</p>
+          <p class="mb-4">Questions or complaints regarding this policy should be directed to the Executive Director of the Office of Affirmative Action and Equal Opportunity Programs, Franklin Building, 3451 Walnut Street, Suite 421, Philadelphia, PA 19104-6106; or (215) 898-6993 (Voice).</p>
+      </div>
+      <div class="mt-8 flex justify-center">
+          <button class="bg-blue-950 text-white py-3 px-6 rounded-full border hover:bg-white hover:text-blue-950">NONDISCRIMINATION STATEMENT</button>
+      </div>
+  </div>
+</div>
 </body>
 </html>
